--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <div class="container">
-    <h1 class="display-3 text-center text-warning bg-danger w-5">MYNTRA SHOPPING</h1>
+    <h1 class="display-3 text-center text-warning bg-danger w-5"><i class="fab fa-wordpress"></i><strong> MANTRA SHOPPING</strong> </h1>
 </div>
 <div class="container">
 <app-products></app-products>
 </div>
-<!-- <div style=" position: absolute; bottom:0px; width: 100%;" >
-<app-footer></app-footer>
+ 
+<app-footer class=mt-auto></app-footer>
 
-</div> -->
