--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,8 +1,10 @@
 <div class="card h-100 shadow" style="width: 18rem; ">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjYm68pvezc5_j-DwjTU6LYkGwQOX1kmoddg&usqp=CAU" class="card-img-top" alt="...">
+    <img src={{productObj.productImage}} class="card-img-top  w-100 " height="150px" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <h5 class="card-title" style="color:#da0e21">{{productObj.productTitle}}</h5>
+      <p class="card-text">{{productObj.description}}</p>
+      <button href="#" class="btn btn-info mx-auto d-block"><i class="fas fa-plus-square"></i>
+        ADD TO CART</button>
     </div>
   </div>
 
