--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBmhcmW9ysKD7RwsHu8q362xaxduVqy1W8Ug&usqp=CAU);
+    background-size: auto;
+    background-attachment: fixed;
+}
