--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,39 @@
+<!-- <div class="bg-light">
+   <div class="row p-5 text-secondary">
+       <div class="col-sm-6 text-start ">
+           <address>
+               <h6>Flat no 300</h6>
+               <h6>KPHB</h6>
+               <h6>Hyderabad-500022</h6>
+           </address>
+       </div>
+       <div class="col-sm-6 text-end">
+           <address>
+               <h6>xxxxxxxxx@mail.com</h6>
+               <h6>+91 9999999999</h6>
+           </address>
+       </div>
+   </div>
+</div> -->
 
-<div class="bg-dark text-white text-center">
-<h1>  Contact No.982648505</h1>
-</div>
+
+
+<footer class="bg-light d-flex flex-wrap p-5 justify-content-between ">
+   
+    <div>
+       
+            <h6>Flat no 300</h6>
+            <h6>KPHB</h6>
+            <h6>Hyderabad-500022</h6>
+       
+    </div>
+    <div >
+       
+            <h6>xxxxxxxxx@mail.com</h6>
+            <h6>+91 9999999999</h6>
+            <h6>Technology solutions</h6>
+     
+    </div>
+
+
+</footer>
