--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,39 @@
+<nav class="navbar navbar-expand-sm navbar-danger bg-light ">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="assets/svg-4.svg" width="40px" style="box-shadow: -1px 2px 3px black;border-radius: 4px;" alt="">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="home" routerLinkActive="active">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="register" routerLinkActive="active">Register</a>
+          </li>
+  
+          <li class="nav-item">
+            <a class="nav-link " routerLink="login" routerLinkActive="active">Login</a>
+          </li>
+  
+          <li class="nav-item">
+            <a class="nav-link " routerLink="contactus" routerLinkActive="active">Contactus</a>
+          </li>
+  
+          <li class="nav-item">
+            <a class="nav-link " routerLink="products" routerLinkActive="active">Products</a>
+          </li>
+        </ul>
+  
+      </div>
+    </div>
+  </nav>
 <div class="container">
-    <h1 class="display-3 text-center text-warning bg-danger w-5"><i class="fab fa-wordpress"></i><strong> MANTRA SHOPPING</strong> </h1>
-</div>
-<div class="container">
-<app-products></app-products>
+ <router-outlet></router-outlet>
 </div>
  
 <app-footer class=mt-auto></app-footer>
