--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,8 +1,8 @@
 <div class="card h-100 shadow" style="width: 18rem; ">
-    <img src={{productObj.productImage}} class="card-img-top  w-100 " height="150px" alt="...">
+    <img src={{productObj.productImage}} class="card-img-top  w-100 " height="250px" alt="...">
     <div class="card-body">
-      <h5 class="card-title" style="color:#da0e21">{{productObj.productTitle}}</h5>
-      <p class="card-text">{{productObj.description}}</p>
+      <h5 class="card-title " style="color:#da0e21;text-align: center;text-shadow:black;">{{productObj.productTitle}}</h5>
+    <strong>  <p class="card-text " style="font-family: 'Arapey', serif; ">{{productObj.description}}</p></strong>
       <button href="#" class="btn btn-info mx-auto d-block"><i class="fas fa-plus-square"></i>
         ADD TO CART</button>
     </div>
