--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,16 @@
-<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 mt-5">
-<div class="col" *ngFor="let prObj of products">
-    <app-product-details [productObj]=prObj ></app-product-details>
-</div>
-
-</div>
+<!-- pills -->
+<ul class="nav nav-pills justify-content-evenly  ">
+    <li class="nav-item">
+      <a class="nav-link  shadow"  routerLink="mobiles" routerLinkActive="active">Mobiles</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link  shadow" routerLink="bikes" routerLinkActive="active">Bikes</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link shadow" routerLink="televisions" routerLinkActive="active">Televisions</a>
+    </li>
+    
+  </ul>
+  <div class="container">
+      <router-outlet></router-outlet>
+  </div>
