--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-danger bg-light ">
+<nav class="navbar navbar-expand-sm navbar-collapse bg-light ">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="assets/svg-4.svg" width="40px" style="box-shadow: -1px 2px 3px black;border-radius: 4px;" alt="">
@@ -26,6 +26,13 @@
   
           <li class="nav-item">
             <a class="nav-link " routerLink="products" routerLinkActive="active">Products</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link " routerLink="data1" routerLinkActive="active">info1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " routerLink="data2" routerLinkActive="active">info2</a>
           </li>
         </ul>
   
